few chnages to folders

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="/Dashboard/dashboard.css" />
+    <link rel="stylesheet" href="dashboard.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -27,7 +27,7 @@
         <h2 class="main-title">What services Pedicare offers!!!</h2>
         <div class="content">
           <div class="image">
-            <img src="/images/treatment.jpg" alt="" />
+            <img src="../images/treatment.jpg" alt="" />
           </div>
           <!-- treatments offered -->
           <div class="text-box">
@@ -48,7 +48,7 @@
         <h2 class="main-title">Want to see a doctor!!!</h2>
         <div class="content">
           <div class="image">
-            <img src="/images/appointments.jpg" alt="" />
+            <img src="../images/appointments.jpg" alt="" />
           </div>
           <div class="text-box">
             <h3>APPOINTMENTS</h3>
@@ -69,7 +69,7 @@
 
         <div class="content">
           <div class="image">
-            <img src="/images/vaccination.jpg" alt="" />
+            <img src="../images/vaccination.jpg" alt="" />
           </div>
           <div class="info">
             <h4 class="info-title">VACCINATION</h4>
@@ -112,11 +112,11 @@
             </li>
           </div>
           <div class="image">
-            <img src="/images/onlinechat.jpg" alt="" />
+            <img src="../images/onlinechat.jpg" alt="" />
           </div>
         </div>
       </div>
     </section>
-    <script src="/Dashboard/dashboard.js"></script>
+    <script src="dashboard.js"></script>
   </body>
 </html>
