--- a/Landing/index.html
+++ b/Landing/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedicare website</title>
-    <link rel="stylesheet" type="text/css" href="/Landing/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -35,7 +35,7 @@
                 </div>
               
                <div class="imgBox">
-                <img src="/images/mobile-online.jpg" class="Pedicare" alt="">
+                <img src="../images/mobile-online.jpg" class="Pedicare" alt="">
                </div>
             </div>
             </section>
