changed a few items for file referencing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedicare website</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="landstyle.css">
+    <link rel="shortcut icon" type="image/jpg" href="images/logo.png"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -31,16 +32,16 @@
                     <h3>PEDICARE</h3>
                     <p>Pediatricians have a unique role in evaluating children who live in different family situations<br>
                     They make a big difference to little people</p>
-                    <a href="#">Get Started</a>
+                    <a href="sign.php">Get Started</a>
                 </div>
               
                <div class="imgBox">
-                <img src="../images/mobile-online.jpg" class="Pedicare" alt="">
+                <img src="images/mobile-online.jpg" class="Pedicare" alt="">
                </div>
             </div>
             </section>
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="landscript.js"></script>
 </body>
 </html>
