--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="dashboard.css" />
+    <link rel="shortcut icon" type="image/jpg" href="../images/logo.png"/>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -19,6 +21,8 @@
         <li><a href="/landing page/landing.html">Services</a></li>
         <li><a href="/aboutpage/about.html">Doctors</a></li>
         <li><a href="/servicespage/services.html">Medicines</a></li>
+        <li><b><a href="../logout.php">Logout</a></b></li>
+
       </ul>
     </header>
     <section class="banner"></section>
