--- a/doctors/index.html
+++ b/doctors/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctors</title>
-    <link rel="stylesheet" href="/SSOC PROJECT/doctors/style.css">
+    <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -17,38 +17,40 @@
     <header>
         <a href="/Landing/index.html" class="logo"><i class="fa-solid fa-biohazard"></i></a>
         <ul>
-            <li><a href="/SSOC PROJECT/serives/index.html">Dashboard</a></li>
-            <li><a href="/SSOC PROJECT/doctors/index.html">Doctors</a></li>
-            <li><a href="/SSOC PROJECT/serives/index.html">Medicines</a></li>
+            <li><a href="../serives/index.html">Dashboard</a></li>
+            <li><a href="../doctors/index.html">Doctors</a></li>
+            <li><a href="../serives/index.html">Mediciners</a></li>
+            <li><a href="../logout.php">Logout</a></li>
+
         </ul>
       </header>
       <div class="information">
         <div class="overlay"></div>
-        <img src="/SSOC PROJECT/images/doctors.jpg" class="doctor" alt="">
+        <img src="../images/doctors.jpg" class="doctor" alt="">
         <div id="circle">
             <div class="specialist one">
-                <img src="/SSOC PROJECT/images/dentist.jpg" alt="">
+                <img src="../images/dentist.jpg" alt="">
                 <div >
                     <h1>dentist</h1>
                     <p>According to specification</p>
                 </div>
             </div>
             <div class="specialist two">
-                <img src="/SSOC PROJECT/images/cardiologist.jpg" alt="">
+                <img src="../images/cardiologist.jpg" alt="">
                 <div >
                     <h1>cardiologist</h1>
                     <p>According to specification</p>
                 </div>
             </div>
             <div class="specialist three">
-                <img src="/SSOC PROJECT/images/optician.jpg" alt="">
+                <img src="../images/optician.jpg" alt="">
                 <div >
                     <h1>Optician</h1>
                     <p>According to specification</p>
                 </div>
             </div>
             <div class="specialist four">
-                <img src="/SSOC PROJECT/images/dermatologist.jpg" alt="">
+                <img src="../images/dermatologist.jpg" alt="">
                 <div >
                     <h1>dermatologist</h1>
                     <p>According to specification</p>
@@ -64,6 +66,6 @@
       </div>
     </div>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="/SSOC PROJECT/doctors/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
