--- a/serives/index.html
+++ b/serives/index.html
@@ -67,6 +67,15 @@
                         
                     </a>
                 </li>
+            <li>
+                <a href="../logout.php">
+                    <div class="dropdown">
+                        <span class="title">Logout</span>    
+                      </div>
+                    
+                </a>
+            </li>
+
             </ul>
         </div>
     </div>
